Aligning and navbar correction

--- a/src/About.css
+++ b/src/About.css
@@ -77,7 +77,7 @@ h1{
 .filler{
     margin-top: 6%;
     margin-left: 7%;
-    width: 700px;
+    width: 800px;
 }
 .padspace{
     padding-top: 8px;
